# quick_project

./: CMakeLists.txt  CMakePresets.json  readme.md
inc/: universe.hpp
src/: main.cpp  universe.cpp
